--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Hawthorne</string>
+    <string name="app_name">Hawthorne Bridge</string>
+    <string name="start_button">Start</string>
+    <string name="stop_button">Stop</string>
 </resources>
